Fixes navbar covering screen in responsive mode

--- a/app/assets/stylesheets/navbar.less
+++ b/app/assets/stylesheets/navbar.less
@@ -70,9 +70,8 @@
     margin-left: 20px;
   }
   .navbar-fixed-top {
-    overflow-y: auto;
-    top: 0;
-    bottom: 0;
+    position: absolute;
+    margin: 0;
   }
 }
 
